# mongo-docker

./: README.md  docker-compose.yml  main.py  pyproject.toml
