[tool.poetry]
name = "mongo-db"
version = "0.1.0"
description = ""
authors = ["FacuD <facundodocampo1@gmail.com>"]
readme = "README.md"
packages = [{include = "mongo_db"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
